# Neuro-Nuggets

./: .coverage  .gitignore  README.md  manage.py  postgres.sql  pyproject.toml  requirements.txt  trivia.json
.github/workflows/: python-app.yml
.vercel/: project.json
.vercel/cache/index/: README.md  package-lock.json  package.json  wsqi.py
.vercel/cache/index/api/: __init__.py  helper  index  index.py  manage.py  models.py
api/: app.py  db.py  env  helper.py  index.py  local.py  models.py  run.py
api/routes/: auth.py  main.py  play.py
api/static/: homepage.css
api/static/css/: endless.css  home.css  homepage.css  leaderboard.css  profile.css  signup.css  solo.css
api/templates/: _navigation.html  base.html  index.html
api/templates/pages/: endless.html  game_mode.html  leaderboard.html  login.html  profile.html  signup.html  solo.html
data/storage.db/: storage.db
neuro_nuggets/: app.py  models.py
neuro_nuggets/UI-UX/: homepage.css  homepage.html
neuro_nuggets/routes/: auth.py  game.py  main.py  play.py
neuro_nuggets/templates/: _navigation.html  base.html  index.html
neuro_nuggets/templates/pages/: endless.html  game_mode.html  leaderboard.html  login.html  play.html  profile.html  signup.html  solo.html  stylesht.css
nngame/: nngame.css  profilep.html
tests/: test_authentication.py  test_questions.py  test_user.py  test_webpages.py
tests/functional/: test_auth_webpages.py  test_webpages.py
tests/functional/templates/: _navigation.html  test.html
tests/unit/: test_authentication.py  test_question.py  test_user.py
(+27 files in other folders)
